@@ -1,3 +1,9 @@
+[B]Version 2.5.8[/B]
+Global arama fixed
+klip addon activated
+search improved
+live tv german english section add
+live tv FM radio section add
 [B]Version 2.5.0[/B]
 - All structure changed
 - Many service add
